public/styles.css
/**
* CONTENTS
*
* SETTINGS
* Global...............Globally-available variables and config.
*
* BASE
* Headings.............H1–H6 styles.
* Paragraphs...........Paragraph styles.
*
* Universal
* Container Primitives...Wrapping and constraining elements.
* Font Primitives.......Generic font styles.
*
* COMPONENTS
* Page-head............The main page header.
* Page-foot............The main page footer.
* Buttons..............Button elements.
*
* Media queries
* Medium...............Media queries for medium screens
*
*/

/*------------------------------------*\
 Settings
\*------------------------------------*/

:root {
  --primary-light: #f1f7fd;
  --secondary-light: #f5cac3;
  --another-light: #1c73e8;
  --primary-dark: #deebff;
  --secondary-dark: #84a59d;
  --header-font: 'PT Serif', serif;
  --paragraph-font: 'Playfair Display', serif;
}

/*------------------------------------*\
 Base
\*------------------------------------*/

body {
  background: var(--primary-light);
  font-family: var(--paragraph-font);
}

h1 {
  text-align: center;
  font-family: var(--paragraph-font);
  font-size: 3rem;
}

p {
  font-size: 0.8rem;
}

/*------------------------------------*\
 Universal
\*------------------------------------*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.main {
  /* max-width: 80%; */
  /* margin: 0 auto; */
  padding: 4rem 2rem;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
}

.main-form {
  flex-direction: column;
  align-items: center;
}

/*------------------------------------*\
Components
\*------------------------------------*/

.header {
  background-color: var(--primary-dark);
  display: flex;
  align-items: center;
  padding: 1rem;
  justify-content: center;
}

.filter {
  display: flex;
  justify-content: center;
  gap: 20px;
  align-items: center;
}

select {
  border: 1px solid var(--another-light);
  padding: 1rem;
  border-radius: 5px;
}

.header__link {
  /* background-color: var(--secondary-light); */
  background-color: white;
  color: black;
  text-decoration: none;
  font-weight: bold;
  padding: 1rem 2rem;
  border: 1px solid var(--another-light);
  border-radius: 5px;
}

/* can be deleted once ensured this works - same in js */
/* .main__row {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
} */

.gallery-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2rem;
  max-width: 80%;
}

.gallery-child {
  color: var(--another-light);
  max-width: 280px;
  min-height: 25rem;
  border-radius: 20px;
  border: 1px solid var(--another-light);
  overflow: hidden;
  box-sizing: border-box;
  /* margin: 1rem; */
  /* margin: 1rem auto; */
  /* overflow: hidden; */
  /* background-color: var(--primary-dark); */
  background-color: white;
}

.main__image {
  width: 100%;
  height: 50%;
  object-fit: cover;
  overflow: hidden;
}

.main__username {
  font-size: 1.2rem;
  font-weight: 500;
  margin-bottom: 1rem;
  font-style: italic;
}

.main__description {
  font-size: 1.5rem;
  font-weight: 700;
  /* margin: 0; */
}

.main__image-description {
  font-size: 1.2rem;
  font-weight: 400;
  /* background-color: var(--primary-dark); */
  padding: 0 1rem;
  box-sizing: border-box;
  /* height: 30%; */
}

.main__description-container {
  width: 50%;
  box-sizing: border-box;
  padding: 1rem;
}

.header__title {
  color: #1a1a1a;
  padding: 2rem;
}

textarea {
  caret-color: transparent;
  resize: none;
}

.form__title {
  padding: 2rem;
  font-size: 2.5rem;
}

form {
  margin-top: 30px;
  display: flex;
  flex-direction: column;
  border: 1px solid var(--another-light);
  background-color: white;
  border-radius: 15px;
  width: 80%;
  padding: 3rem;
  align-items: center;
}

label {
  text-align: center;
}

input,
textarea {
  margin: 1rem 0;
  padding: 0.5rem;
  border-radius: 5px;
  background-color: var(--primary-dark);
  margin: 1rem auto;
}

input,
label,
textarea,
fieldset {
  width: 70%;
}
.bottom_border {
  border: none;
  border-bottom: 2px solid var(--another-light);
}

.file_input {
  display: none;
}

.form_btn {
  font-size: 1rem;
  margin-top: 1em;
  padding: 10px 15px;
  color: white;
  background-color: var(--another-light);
  border: none;
  border-radius: 3px;
}

.file_input_label {
  padding: 10px 15px;
  background-color: var(--another-light);
}

fieldset {
  /* width: 100%; */
  /* padding: 0 auto; */
  display: flex;
  align-items: center;
  border: 1px solid var(--another-light);
}

.submit_btn {
  margin-top: 1em;
  padding: 10px 15px;
  background-color: var(--primary-dark);
}

[aria-invalid='true'] {
  border-color: red;
}
[aria-invalid='true'] + * {
  color: red;
}
[aria-invalid='true'] + *::before {
  content: '⚠️ ';
}

[hidden='true'] {
  display: none;
}

[hidden='false'] {
  display: block;
}

/*------------------------------------*\
 Media queries
\*------------------------------------*/

@media screen and (min-width: 1000px) {
}

